concord_macros/tests/trybuild/fail/codegen_contract/buffered_endpoint_execute_sse.stderr
error[E0599]: the method `execute_sse` exists for struct `PendingRequest<'_, BufferedEndpointExecuteSseApiCx, EpUserHa48f81f001b893d2, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen_contract/buffered_endpoint_execute_sse.rs:16:24
   |
 5 | / api! {
 6 | |     client BufferedEndpointExecuteSseApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET User
   | |____________- doesn't satisfy `<_ as Endpoint<BufferedEndpointExecuteSseApiCx>>::Response = SseStream<_>`
...
16 |       let _ = api.user().execute_sse().await.unwrap();
   |                          ^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `<EpUserHa48f81f001b893d2 as concord_core::prelude::Endpoint<BufferedEndpointExecuteSseApiCx>>::Response = SseStream<_>`
